--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 						<h5 class="card-title">Jordan 1 Retro High OG</h5>
 						<p class="card-text">Chicago Lost and Found</p>
 						<p class="card-price"><strong>Prezzo:</strong> €349,99</p>
-						<a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+						<a href="#" class="btn btn-primary" onclick="addProduct('jordan')">Aggiungi al carrello</a>
 					</div>
 				</div>
 			</div>
@@ -168,7 +168,7 @@
 						<h5 class="card-title">Adidas Yeezy Boost 350 V2</h5>
 						<p class="card-text">Zebra (2017/2022)</p>
 						<p class="card-price"><strong>Prezzo:</strong> €419,99</p>
-						<a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+						<a href="#" class="btn btn-primary" onclick="addProduct('zebra')">Aggiungi al carrello</a>
 					</div>
 				</div>
 			</div>
@@ -189,6 +189,9 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- cart -->
+	<script src="/js/cart.js"></script>
 
 	<!-- Swiper JS -->
 	<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
