--- a/pages/prodotti.html
+++ b/pages/prodotti.html
@@ -72,7 +72,7 @@
 							<h5 class="card-title">Jordan 1 Retro High OG</h5>
 							<p class="card-text">Chicago Lost and Found</p>
 							<p class="card-price"><strong>Prezzo:</strong> €349,99</p>
-							<a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+							<a href="#" onclick="addProduct('jordan')" class="btn btn-primary">Aggiungi al carrello</a>
 						</div>
 					</div>
 				</div>
@@ -243,6 +243,9 @@
 
 	<!-- Collegamento ai file JavaScript di Bootstrap -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+	<!-- cart -->
+	<script src="/js/cart.js"></script>
 </body>
 
 </html>
