--- a/pages/carrello.html
+++ b/pages/carrello.html
@@ -12,6 +12,7 @@
 		integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="/css/global.css">
+	<link rel="stylesheet" href="/css/carrello.css">
 </head>
 
 <body>
@@ -58,6 +59,15 @@
 
 	<img src="/img/SCRITTA.png" style="height: 25px; display: block; margin: 50px auto;" />
 
+	<!-- visualizzazione carrello -->
+	<div class="carrello">
+		<div class="header">
+			Il tuo carrello
+		</div>
+		<div id="prodotti">
+		</div>
+	</div>
+
 	<footer class="bg-dark text-light py-3">
 		<div class="container text-center">
 			<p>&copy; 2023 SNEAKERSITE - Tutti i diritti riservati</p>
@@ -65,6 +75,9 @@
 			<p>@alessandroferrari</p>
 		</div>
 	</footer>
+	<!-- cart -->
+	<script src="/js/cart.js"></script>
+
 </body>
 
 
