--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	<div class="swiper mySwiper">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide"><a href="/pages/jordan.html"><img src="img/chicago.jpg"></a></div>
-			<div class="swiper-slide"><a href="/pages/prodotti.html"><img src="img/zebra.jpg"></a></div>
+			<div class="swiper-slide"><a href="/pages/zebra.html"><img src="img/zebra.jpg"></a></div>
 			<div class="swiper-slide"><a href="/pages/prodotti.html"><img src="img/air-force.jpg"></a></div>
 			<div class="swiper-slide"><a href="/pages/prodotti.html"><img src="img/air_max_1.jpg"></a></div>
 			<div class="swiper-slide"><a href="/pages/prodotti.html"><img src="img/dunk_low.jpg"></a></div>
@@ -161,7 +161,7 @@
 		<div class="col">
 			<div class="spaziaturaprodotti">
 				<div class="card h-100">
-					<a href="/pages/prodotto.html">
+					<a href="/pages/zebra.html">
 						<img src="/img/zebra_short.jpg" class="card-img-top" alt="...">
 					</a>
 					<div class="card-body">
@@ -192,6 +192,9 @@
 
 	<!-- cart -->
 	<script src="/js/cart.js"></script>
+
+	<!-- Collegamento ai file JavaScript di Bootstrap -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 	<!-- Swiper JS -->
 	<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
