--- a/pages/prodotti.html
+++ b/pages/prodotti.html
@@ -80,14 +80,14 @@
 			<div class="col">
 				<div class="spaziaturaprodotti">
 					<div class="card h-100">
-						<a href="prodotti.html">
+						<a href="zebra.html">
 							<img src="/img/zebra_short.jpg" class="card-img-top" alt="...">
 						</a>
 						<div class="card-body">
 							<h5 class="card-title">Adidas Yeezy Boost 350 V2</h5>
 							<p class="card-text">Zebra (2017/2022)</p>
 							<p class="card-price"><strong>Prezzo:</strong> €419,99</p>
-							<a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+							<a href="#" onclick="addProduct('zebra')" class=" btn btn-primary">Aggiungi al carrello</a>
 						</div>
 					</div>
 				</div>
