--- a/pages/chisiamo.html
+++ b/pages/chisiamo.html
@@ -138,6 +138,9 @@
 			<p>@alessandroferrari</p>
 		</div>
 	</footer>
+
+	<!-- Collegamento ai file JavaScript di Bootstrap -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 	<!-- cart -->
 	<script src="/js/cart.js"></script>
 </body>
