--- a/pages/contatti.html
+++ b/pages/contatti.html
@@ -58,39 +58,41 @@
 
 	<img src="/img/SCRITTA.png" style="height: 25px; display: block; margin: 50px auto;" />
 
-	<div class="contatti">
-		<div class="indirizzo">
-			<p><a href="mailto:info@sneakersite.it"><img src="/img/mail.png" />info@sneakersite.it</a></p>
-			<p><a href="tel:0321456789"><img src="/img/phone.png" />0321456789</a></p>
+	<div class="page">
+		<div class="contatti">
+			<div class="indirizzo">
+				<p><a href="mailto:info@sneakersite.it"><img src="/img/mail.png" />info@sneakersite.it</a></p>
+				<p><a href="tel:0321456789"><img src="/img/phone.png" />0321456789</a></p>
+			</div>
+			<div class="form">
+				<form id="contact" action="" method="post" onsubmit="show_thanks(event)">
+					<h3>Contattaci</h3>
+					<h4>Contattaci, ti risponderemo il prima possibile</h4>
+					<fieldset>
+						<input placeholder="Nome" type="text" tabindex="1" required autofocus>
+					</fieldset>
+					<fieldset>
+						<input placeholder="Email" type="email" tabindex="2" required>
+					</fieldset>
+					<fieldset>
+						<textarea placeholder="Inserisci qui il tuo messaggio.." tabindex="5" required></textarea>
+					</fieldset>
+					<fieldset>
+						<input type="checkbox" required> <label for="checkbox">Accetto i termini e le condizioni</label>
+					</fieldset>
+					<fieldset>
+						<button name="Invia" type="submit" id="contact-submit" data-submit="...Sending">Invia</button>
+					</fieldset>
+				</form>
+			</div>
 		</div>
-		<div class="form">
-			<form id="contact" action="" method="post">
-				<h3>Contattaci</h3>
-				<h4>Contattaci, ti risponderemo il prima possibile</h4>
-				<fieldset>
-					<input placeholder="Nome" type="text" tabindex="1" required autofocus>
-				</fieldset>
-				<fieldset>
-					<input placeholder="Email" type="email" tabindex="2" required>
-				</fieldset>
-				<fieldset>
-					<textarea placeholder="Inserisci qui il tuo messaggio.." tabindex="5" required></textarea>
-				</fieldset>
-				<fieldset>
-					<input type="checkbox" required> <label for="checkbox">Accetto i termini e le condizioni</label>
-				</fieldset>
-				<fieldset>
-					<button name="Invia" type="submit" id="contact-submit" data-submit="...Sending">Invia</button>
-				</fieldset>
-			</form>
+		<div class="map">
+			<iframe
+				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d349.8938006935685!2d8.621467315798567!3d45.446625171745254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47865a2072f2ea17%3A0x9189b813167445ae!2sCorso%20Italia%2C%201%2C%2028100%20Novara%20NO!5e0!3m2!1sit!2sit!4v1683894394081!5m2!1sit!2sit"
+				allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="map" width="100%"
+				height="100%">
+			</iframe>
 		</div>
-	</div>
-	<div class="map">
-		<iframe
-			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d349.8938006935685!2d8.621467315798567!3d45.446625171745254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47865a2072f2ea17%3A0x9189b813167445ae!2sCorso%20Italia%2C%201%2C%2028100%20Novara%20NO!5e0!3m2!1sit!2sit!4v1683894394081!5m2!1sit!2sit"
-			allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="map" width="100%"
-			height="100%">
-		</iframe>
 	</div>
 
 	<footer class="bg-dark text-light py-3">
@@ -100,8 +102,18 @@
 			<p>@alessandroferrari</p>
 		</div>
 	</footer>
+	<!-- Collegamento ai file JavaScript di Bootstrap -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 	<!-- cart -->
 	<script src="/js/cart.js"></script>
+	<script>
+		function show_thanks ( e ) {
+			e.stopPropagation();
+			e.preventDefault();
+			alert( "Grazie per averci contattato!" );
+		}
+
+	</script>
 </body>
 
 
