--- a/pages/zebra.html
+++ b/pages/zebra.html
@@ -12,7 +12,15 @@
 		integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="/css/global.css">
-	<link rel="stylesheet" href="/css/carrello.css">
+
+	<script>
+		function addToCart () {
+			addProduct( 'zebra',
+				document.getElementById( 'taglia' ).value,
+				document.getElementById( 'quantita' ).value
+			);
+		}
+	</script>
 </head>
 
 <body>
@@ -59,17 +67,38 @@
 
 	<img src="/img/SCRITTA.png" style="height: 25px; display: block; margin: 50px auto;" />
 
-	<div class="page">
 
-		<!-- visualizzazione carrello -->
-		<div class="carrello">
-			<div class="header">
-				Il tuo carrello
+	<main class="container my-5">
+		<div class="row">
+			<div class="col-md-6">
+				<img src="/img/zebra_short.jpg" alt="Immagine di esempio" class="img-fluid">
 			</div>
-			<div id="prodotti">
+			<div class="col-md-6">
+				<h1 class="mb-4">Adidas Yeezy Boost 350 V2</h1>
+				<p class="mb-4">Zebra (2017/2022)</p>
+				<h2 class="mb-3">Prezzo: €419,99</h2>
+				<form>
+					<div class="mb-3">
+						<label for="taglia" class="form-label">Taglia:</label>
+						<select id="taglia" class="form-select" aria-label="Default select example">
+							<option selected>Seleziona la tua taglia</option>
+							<option value="1">EU 39 / US 6.5 / UK 6</option>
+							<option value="2">EU 40 / US 7 / UK 6.5</option>
+							<option value="3">EU 41 / US 8 / UK 7.5</option>
+							<option value="4">EU 42 / US 8.5 / UK 8</option>
+							<option value="5">EU 43 / US 9.5 / UK 9</option>
+							<option value="6">EU 44 / US 10 / UK 9.5</option>
+							<option value="7">EU 45 / US 11 / UK 10.5</option>
+							<option value="8">EU 46 / US 12 / UK 11.5</option>
+						</select>
+						<label for="quantita" class="form-label">Quantità:</label>
+						<input type="number" class="form-control" id="quantita" min="1" value="1">
+					</div>
+					<span class="btn btn-primary" onclick="addToCart()">Aggiungi al carrello</span>
+				</form>
 			</div>
 		</div>
-	</div>
+	</main>
 
 	<footer class="bg-dark text-light py-3">
 		<div class="container text-center">
@@ -78,13 +107,13 @@
 			<p>@alessandroferrari</p>
 		</div>
 	</footer>
+
+
 	<!-- Collegamento ai file JavaScript di Bootstrap -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
 	<!-- cart -->
 	<script src="/js/cart.js"></script>
-
 </body>
-
-
 
 </html>
