--- a/pages/contatti.html
+++ b/pages/contatti.html
@@ -30,7 +30,7 @@
 						<ul class="navbar-nav">
 
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+								<a class="nav-link" aria-current="page" href="/index.html">Home</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="/pages/chisiamo.html">Chi siamo</a>
@@ -42,7 +42,7 @@
 
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="/pages/contatti.html">Contatti</a>
+								<a class="nav-link active" href="/pages/contatti.html">Contatti</a>
 							</li>
 					</div>
 					<div class="boxcarrello">
