--- a/pages/zebra.html
+++ b/pages/zebra.html
@@ -39,13 +39,13 @@
 						<ul class="navbar-nav">
 
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+								<a class="nav-link" aria-current="page" href="/index.html">Home</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="/pages/chisiamo.html">Chi siamo</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="/pages/prodotti.html">Prodotti</a>
+								<a class="nav-link active" href="/pages/prodotti.html">Prodotti</a>
 							</li>
 							<li class="nav-item">
 
